0.0.1版发布
在0.0.1-beta的基础上修改了发现的个别问题